<resources>
    <string name="app_name">Badminton Rankers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard_title">RANKERS LEADERBOARD</string>
    <string name="history_title">MATCH HISTORY</string>
    <string name="member_title">MEMBERS</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="history">History</string>
    <string name="member">Member</string>
    <string name="memberNameHint">Input Member Name</string>
    <string name="addButton">Add</string>
    <string name="addNewMemberTitle">Add New Member</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="no_data">No Data</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="addNewMatchesTitle">Record Match</string>
    <string name="score">SCORE</string>
</resources>