<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/newMatchesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addNewMatchesTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/teamATitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newMatchesTitle"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spinnerTeamA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamATitle"/>

        <TextView
            android:id="@+id/teamAAnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="And"
            app:layout_constraintStart_toEndOf="@+id/spinnerTeamA1"
            app:layout_constraintTop_toBottomOf="@+id/teamATitle"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/spinnerTeamA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/teamAAnd"
            app:layout_constraintTop_toBottomOf="@+id/teamATitle"/>

        <TextView
            android:id="@+id/vs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTeamA1"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/teamBTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vs"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/spinnerTeamB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamBTitle"/>

        <TextView
            android:id="@+id/teamBAnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="And"
            app:layout_constraintStart_toEndOf="@+id/spinnerTeamB1"
            app:layout_constraintTop_toBottomOf="@+id/teamBTitle"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/spinnerTeamB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/teamBAnd"
            app:layout_constraintTop_toBottomOf="@+id/teamBTitle"/>

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vs"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/scoreTeamA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_input"
            android:inputType="number"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreTitle"
            />
        <TextView
            android:id="@+id/scoreSeparator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=":"
            app:layout_constraintStart_toEndOf="@id/scoreTeamA"
            app:layout_constraintTop_toBottomOf="@+id/scoreTitle"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/scoreTeamB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_input"
            android:inputType="number"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toEndOf="@id/scoreSeparator"
            app:layout_constraintTop_toBottomOf="@id/scoreTitle"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreSeparator"
            app:cornerRadius="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>