<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.Member">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/memberTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/member_title"
        android:textStyle="bold"
        android:textSize="32sp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/cardview_light_background"
        android:layout_margin="16dp"/>

    <!--    Loading-->
    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetching_data"
        app:layout_constraintTop_toBottomOf="@+id/loadingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!--    No Data-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/noDataLottie"
        app:lottie_rawRes="@raw/empty_data"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_width="120dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/noDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        app:layout_constraintTop_toBottomOf="@+id/noDataLottie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

    <!--    Data Available-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/memberTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginEnd="12dp"
        app:cardUseCompatPadding="true"
        android:visibility="gone">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Search"
            android:iconifiedByDefault="false"
            />

    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/agentRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cardSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="12dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>